messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging-app
spec:
  selector:
    app: django-messaging-app
    version: blue  # Initially points to blue deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-blue
  labels:
    app: django-messaging-app
    version: blue
spec:
  selector:
    app: django-messaging-app
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-green
  labels:
    app: django-messaging-app
    version: green
spec:
  selector:
    app: django-messaging-app
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
